--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-native-fontawesome": "^0.2.6",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-picker/picker": "^1.9.11",
     "@react-navigation/native": "^5.9.2",
@@ -22,6 +23,7 @@
     "react-native": "0.63.4",
     "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.10.1",
+    "react-native-image-picker": "^3.2.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
